# node-lz4-wasm

./: CHANGELOG.md  build-wasm.sh  eslint.config.mjs  jest.config.js  package.json  pnpm-lock.yaml  ts-project-builder.config.mjs  tsconfig.json
.github/workflows/: test.yaml
rust/: Cargo.toml
rust/src/: lib.rs
src/: index.ts  node.ts  web.ts
tests/: node.test.ts
