[package]
name = "lz4-wasm"
edition = "2024"

[dependencies]
lz4_flex = "0.11.3"
wasm-bindgen = { version = "0.2.100", features = ["enable-interning"] }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory"]

[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true
panic = "unwind"
strip = "symbols"
